--- a/script_asier1.ipynb
+++ b/script_asier1.ipynb
@@ -291,24 +291,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def display_topics(H, W, feature_names, documents, test, no_top_words = 30, no_top_documents = 10):\n",
-    "    f = open(test + \".txt\", \"a\")\n",
+    "def display_topics(H, W, feature_names, documents,output_name, no_top_words = 30, no_top_documents = 10):\n",
+    "    f = open(output_name + \".txt\", \"a\")\n",
     "    for topic_idx, topic in enumerate(H):\n",
-    "        \n",
-    "        topic = \"Topic %d:\" % (topic_idx)\n",
-    "        f.write(topic + '\\n\\n')\n",
-    "        print(topic)\n",
-    "        \n",
-    "        feature_names = \" \".join([feature_names[i]\n",
-    "                        for i in topic.argsort()[:-no_top_words - 1:-1]])\n",
-    "        f.write(feature_names + '\\n\\n')\n",
-    "        print(feature_names)\n",
-    "        \n",
+    "        s = \"Topic: \" + str(topic_idx) + \" -->\"\n",
+    "        print(s)\n",
+    "        f.write(s)\n",
+    "        s = ''.join([' ' +feature_names[i] + ' ' + str(round(topic[i], 5)) \n",
+    "                for i in topic.argsort()[:-no_top_words - 1:-1]])\n",
+    "        print(s)\n",
+    "        f.write(s)\n",
     "        top_doc_indices = np.argsort( W[:,topic_idx] )[::-1][0:no_top_documents]\n",
-    "        for doc_index in top_doc_indices:\n",
-    "            print(documents[doc_index])\n",
-    "            f.write(documents[doc_index] + '\\n')\n",
-    "    f.close()"
+    "        docProbArray=np.argsort(W[:,topic_idx])\n",
+    "        print(docProbArray)\n",
+    "    \n",
+    "        #for doc_index in top_doc_indices:\n",
+    "        #    print(documents[doc_index])\n",
+    "        f.write(\"\\n\")"
    ]
   },
   {
