--- a/script_iker.ipynb
+++ b/script_iker.ipynb
@@ -380,31 +380,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def display_topics(H, W, feature_names, documents, test, no_top_words = 30, no_top_documents = 10):\n",
-    "    f = open(test + \".txt\", \"a\")\n",
+    "def display_topics(H, W, feature_names, documents,output_name, no_top_words = 30, no_top_documents = 10):\n",
+    "    f = open(output_name + \".txt\", \"a\")\n",
     "    for topic_idx, topic in enumerate(H):\n",
-    "        \n",
-    "        topic_num = \"Topic %d:\" % (topic_idx)\n",
-    "        f.write(topic_num + '\\n\\n')\n",
-    "        print(topic_num)\n",
-    "        \n",
-    "        names = []\n",
-    "        for i in topic.argsort()[:-1]:\n",
-    "            try:\n",
-    "                names.append(feature_names[i])\n",
-    "            except Exception:\n",
-    "                break\n",
-    "        \n",
-    "        feature_names = \" \".join(names)\n",
-    "                        \n",
-    "        f.write(feature_names + '\\n\\n')\n",
-    "        print(feature_names)\n",
-    "        \n",
+    "        s = \"Topic: \" + str(topic_idx) + \" -->\"\n",
+    "        print(s)\n",
+    "        f.write(s)\n",
+    "        s = ''.join([' ' +feature_names[i] + ' ' + str(round(topic[i], 5)) \n",
+    "                for i in topic.argsort()[:-no_top_words - 1:-1]])\n",
+    "        print(s)\n",
+    "        f.write(s)\n",
     "        top_doc_indices = np.argsort( W[:,topic_idx] )[::-1][0:no_top_documents]\n",
-    "        for doc_index in top_doc_indices:\n",
-    "            print(documents[doc_index])\n",
-    "            f.write(documents[doc_index] + '\\n')\n",
-    "    f.close()"
+    "        docProbArray=np.argsort(W[:,topic_idx])\n",
+    "        print(docProbArray)\n",
+    "    \n",
+    "        #for doc_index in top_doc_indices:\n",
+    "        #    print(documents[doc_index])\n",
+    "        f.write(\"\\n\")"
    ]
   },
   {
@@ -1376,8 +1368,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
