--- a/script_asier1.ipynb
+++ b/script_asier1.ipynb
@@ -307,7 +307,8 @@
     "    \n",
     "        #for doc_index in top_doc_indices:\n",
     "        #    print(documents[doc_index])\n",
-    "        f.write(\"\\n\")"
+    "        f.write(\"\\n\")\n",
+    "    f.close()"
    ]
   },
   {
@@ -588,7 +589,7 @@
    "id": "4f0ad1bb",
    "metadata": {},
    "source": [
-    "### GensimMicroPos"
+    "### GensimHRPos"
    ]
   },
   {
@@ -598,7 +599,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "corpus,dictionary = preproceso(sonyPositivesDocuments)"
+    "corpus,dictionary = preproceso(HRPositivesDocuments)"
    ]
   },
   {
@@ -608,7 +609,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open('GensimSonyPos[10-100]' + \".txt\", \"a\")\n",
+    "f = open('GensimHRPos[10-100]' + \".txt\", \"a\")\n",
     "for i in range(10,101):\n",
     "    print(\"Generando modelo: \" + str(i))\n",
     "    model=gen_model(i,corpus)\n",
@@ -623,7 +624,7 @@
    "id": "b78326a0",
    "metadata": {},
    "source": [
-    "### GensimMicroNeg"
+    "### GensimHRNeg"
    ]
   },
   {
@@ -633,7 +634,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "corpus,dictionary = preproceso(sonyNegativesDocuments)"
+    "corpus,dictionary = preproceso(HRNegativesDocuments)"
    ]
   },
   {
@@ -643,7 +644,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open('GensimSonyNeg[10-100]' + \".txt\", \"a\")\n",
+    "f = open('GensimHRNeg[10-100]' + \".txt\", \"a\")\n",
     "for i in range(10,101):\n",
     "    print(\"Generando modelo: \" + str(i))\n",
     "    model_act=gen_model(i,corpus)\n",
