--- a/script_asier2.ipynb
+++ b/script_asier2.ipynb
@@ -654,7 +654,7 @@
    "id": "4f0ad1bb",
    "metadata": {},
    "source": [
-    "### GensimMicroPos"
+    "### GensimIntuitPos"
    ]
   },
   {
@@ -664,7 +664,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "corpus,dictionary = preproceso(sonyPositivesDocuments)"
+    "corpus,dictionary = preproceso(intuitPositivesDocuments)"
    ]
   },
   {
@@ -674,47 +674,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open('GensimSonyPos[10-100]' + \".txt\", \"a\")\n",
+    "f = open('GensimIntuitPos[10-100]' + \".txt\", \"a\")\n",
     "for i in range(10,101):\n",
     "    print(\"Generando modelo: \" + str(i))\n",
     "    model=gen_model(i,corpus)\n",
     "    top_topics = model.top_topics(corpus)\n",
     "    f.write(top_topics)\n",
     "    f.write(\"\\n\")\n",
-    "f.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b78326a0",
-   "metadata": {},
-   "source": [
-    "### GensimMicroNeg"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2213adb5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corpus,dictionary = preproceso(sonyNegativesDocuments)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89f3efb8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f = open('GensimSonyNeg[10-100]' + \".txt\", \"a\")\n",
-    "for i in range(10,101):\n",
-    "    print(\"Generando modelo: \" + str(i))\n",
-    "    model_act=gen_model(i,corpus)\n",
-    "    top_topics = model_act.top_topics(corpus)\n",
-    "    f.write(top_topics)\n",
     "f.close()"
    ]
   }
