--- a/script_iñigo2.ipynb
+++ b/script_iñigo2.ipynb
@@ -307,7 +307,8 @@
     "    \n",
     "        #for doc_index in top_doc_indices:\n",
     "        #    print(documents[doc_index])\n",
-    "        f.write(\"\\n\")"
+    "        f.write(\"\\n\")\n",
+    "    f.close()"
    ]
   },
   {
@@ -555,6 +556,132 @@
    "metadata": {},
    "source": [
     "### GensimMicroNeg"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49aafde3",
+   "metadata": {},
+   "source": [
+    "## GENSIM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61563167",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "from nltk.tokenize import RegexpTokenizer\n",
+    "from nltk.stem.wordnet import WordNetLemmatizer\n",
+    "from gensim.corpora import Dictionary\n",
+    "from gensim.models import LdaModel\n",
+    "from pprint import pprint\n",
+    "\n",
+    "logging.basicConfig(format='%(asctime)s : %(levelname)s : %(message)s', level=logging.INFO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b1050c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preproceso(docs):\n",
+    "    # Tokenize \n",
+    "    tokenizer = RegexpTokenizer(r'\\w+')\n",
+    "    for idx in range(len(docs)):\n",
+    "        docs[idx] = docs[idx].lower()  # Convert to lowercase.\n",
+    "        docs[idx] = tokenizer.tokenize(docs[idx])  # Split into words.\n",
+    "\n",
+    "    # Remove numbers, but not words that contain numbers.\n",
+    "    docs = [[token for token in doc if not token.isnumeric()] for doc in docs]\n",
+    "\n",
+    "    # Remove words that are only one character.\n",
+    "    docs = [[token for token in doc if len(token) > 1] for doc in docs]\n",
+    "\n",
+    "    # Lemmatize\n",
+    "    lemmatizer = WordNetLemmatizer()\n",
+    "    docs = [[lemmatizer.lemmatize(token) for token in doc] for doc in docs]\n",
+    "\n",
+    "    # Bag-of-words\n",
+    "    dictionary = Dictionary(docs)\n",
+    "\n",
+    "    corpus = [dictionary.doc2bow(doc) for doc in docs]\n",
+    "    print('Number of unique tokens: %d' % len(dictionary))\n",
+    "    print('Number of documents: %d' % len(corpus))\n",
+    "\n",
+    "    return corpus , dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a31c271",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gen_model(num_topics,corpus, dictionary):\n",
+    "    chunksize = 2000\n",
+    "    passes = 20\n",
+    "    iterations = 400\n",
+    "    eval_every = None  # Don't evaluate model perplexity, takes too much time.\n",
+    "\n",
+    "    # Make an index to word dictionary.\n",
+    "    temp = dictionary[0]  # This is only to \"load\" the dictionary.\n",
+    "    id2word = dictionary.id2token\n",
+    "\n",
+    "    model = LdaModel(\n",
+    "        corpus=corpus,\n",
+    "        id2word=id2word,\n",
+    "        chunksize=chunksize,\n",
+    "        alpha='auto',\n",
+    "        eta='auto',\n",
+    "        iterations=iterations,\n",
+    "        num_topics=num_topics,\n",
+    "        passes=passes,\n",
+    "        eval_every=eval_every\n",
+    "    )\n",
+    "\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f0ad1bb",
+   "metadata": {},
+   "source": [
+    "### GensimIntuitNeg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "631732a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus,dictionary = preproceso(intuitNegativesDocuments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89f3efb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open('GensimIntuitNeg[10-100]' + \".txt\", \"a\")\n",
+    "for i in range(10,101):\n",
+    "    print(\"Generando modelo: \" + str(i))\n",
+    "    model=gen_model(i,corpus)\n",
+    "    top_topics = model.top_topics(corpus)\n",
+    "    f.write(top_topics)\n",
+    "    f.write(\"\\n\")\n",
+    "f.close()"
    ]
   }
  ],
