--- a/script_endika.ipynb
+++ b/script_endika.ipynb
@@ -308,7 +308,7 @@
     "        #for doc_index in top_doc_indices:\n",
     "        #    print(documents[doc_index])\n",
     "        f.write(\"\\n\")\n",
-    "\n"
+    "    f.close()\n"
    ]
   },
   {
