Gensim casi arreglado, esta bien en el de iker

--- a/script_iker.ipynb
+++ b/script_iker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "a382f702",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "d93b9346",
    "metadata": {},
    "outputs": [],
@@ -50,44 +50,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "27c616d9",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'asin', 'vote', 'style', 'feature', 'similar_item',\n",
+       "       'brand', 'also_buy', 'category', 'title', 'main_cat', 'description',\n",
+       "       'reviewTime', 'overall', 'reviewerID', 'reviewerName', 'unixReviewTime',\n",
+       "       'reviewText', 'summary', 'City', 'State', 'Country', 'Postal Code'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "video_games.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "5021b42d",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "by\\n    \\n    Electronic Arts                        19949\n",
+       "by\\n    \\n    Nintendo                               16812\n",
+       "by\\n    \\n    Sony                                   10915\n",
+       "by\\n    \\n    Microsoft                               8810\n",
+       "Nintendo                                              4660\n",
+       "Electronic Arts                                       1780\n",
+       "Sony                                                  1697\n",
+       "Microsoft                                             1230\n",
+       "Sony Computer Entertainment                            438\n",
+       "by\\n    \\n    Sony Computer Entertainment America      106\n",
+       "Nintendo of America                                     98\n",
+       "Electronic Arts, Inc.                                   78\n",
+       "by\\n    \\n    Sony Computer Entertainment               74\n",
+       "Sony Entertainment                                      52\n",
+       "Microsoft Corporation                                   44\n",
+       "Super Nintendo Super Castlevania IV                     22\n",
+       "Electronc Arts                                          20\n",
+       "Electrobrain and Hudson                                  6\n",
+       "by\\n    \\n    Sony Online Entertainment                  5\n",
+       "Name: brand, dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "video_games['brand'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "f5327286",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'asin', 'brand', 'price', 'title', 'Unnamed: 5',\n",
+       "       'category', 'rank', 'description', 'main_cat', 'details', 'overall',\n",
+       "       'vote_y', 'verified_y', 'reviewTime_y', 'reviewerID_y',\n",
+       "       'reviewerName_y', 'reviewText', 'summary', 'unixReviewTime', 'State',\n",
+       "       'Country', 'Postal Code'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "insurances.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "02b5c3f1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Intuit                              72752\n",
+       "H&R Block                           16242\n",
+       "by\\n    \\n    Intuit                 9488\n",
+       "HRBB9                                 657\n",
+       "H&amp;R Block                         358\n",
+       "by\\n    \\n    H&R Block               195\n",
+       "Intuit, Inc.                           27\n",
+       "H&R BLCOK                              17\n",
+       "John Truby Blockbuster                 15\n",
+       "Video Blocks                            4\n",
+       "Administaff HRTools                     4\n",
+       "H & R Block                             4\n",
+       "Intuit Inc.                             3\n",
+       "Teneron/Block Financial Software        3\n",
+       "H&R                                     3\n",
+       "H&R BLOCK                               2\n",
+       "Intuit Inc./BlueHippo                   2\n",
+       "Name: brand, dtype: int64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "insurances['brand'].value_counts()"
    ]
@@ -102,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "ce6d3f0b",
    "metadata": {},
    "outputs": [],
@@ -112,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "995cf11d",
    "metadata": {},
    "outputs": [],
@@ -122,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "d4ae4961",
    "metadata": {},
    "outputs": [],
@@ -132,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "96115ce4",
    "metadata": {},
    "outputs": [],
@@ -142,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "53c304ad",
    "metadata": {},
    "outputs": [],
@@ -160,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "faa65796",
    "metadata": {},
    "outputs": [],
@@ -171,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "61624c7e",
    "metadata": {},
    "outputs": [],
@@ -182,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "8e062310",
    "metadata": {},
    "outputs": [],
@@ -193,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "61e2f2c2",
    "metadata": {},
    "outputs": [],
@@ -204,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "684535e0",
    "metadata": {},
    "outputs": [],
@@ -223,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "8142ad75",
    "metadata": {},
    "outputs": [],
@@ -234,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "973ae4fa",
    "metadata": {},
    "outputs": [],
@@ -245,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "78a66c4e",
    "metadata": {},
    "outputs": [],
@@ -256,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "bcc85b9d",
    "metadata": {},
    "outputs": [],
@@ -267,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "523a0f1b",
    "metadata": {},
    "outputs": [],
@@ -503,10 +592,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "61563167",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package wordnet to /home/eiros/nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n",
+      "[nltk_data] Downloading package omw-1.4 to /home/eiros/nltk_data...\n",
+      "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "import logging\n",
     "import nltk\n",
@@ -514,6 +614,7 @@
     "from nltk.stem.wordnet import WordNetLemmatizer\n",
     "from gensim.corpora import Dictionary\n",
     "from gensim.models import LdaModel\n",
+    "import gensim\n",
     "from pprint import pprint\n",
     "nltk.download('wordnet')\n",
     "nltk.download('omw-1.4')\n",
@@ -523,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "8b1050c7",
    "metadata": {},
    "outputs": [],
@@ -540,6 +641,10 @@
     "\n",
     "    # Remove words that are only one character.\n",
     "    docs = [[token for token in doc if len(token) > 1] for doc in docs]\n",
+    "\n",
+    "    # Remove stopwords\n",
+    "    stopwords = gensim.parsing.preprocessing.STOPWORDS\n",
+    "    docs = [[token for token in doc if not(token in stopwords)] for doc in docs]\n",
     "\n",
     "    # Lemmatize\n",
     "    lemmatizer = WordNetLemmatizer()\n",
@@ -565,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "5a31c271",
    "metadata": {},
    "outputs": [],
@@ -589,8 +694,7 @@
     "        iterations=iterations,\n",
     "        num_topics=num_topics,\n",
     "        passes=passes,\n",
-    "        eval_every=eval_every,\n",
-    "        model=gen_model(i,corpus,dictionary)\n",
+    "        eval_every=eval_every\n",
     "    )\n",
     "\n",
     "    return model"
@@ -606,10 +710,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "631732a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-05-21 20:53:03,335 : INFO : adding document #0 to Dictionary<0 unique tokens: []>\n",
+      "2022-05-21 20:53:03,988 : INFO : built Dictionary<25005 unique tokens: ['best', 'buy', 'came', 'card', 'compared']...> from 7715 documents (total 711667 corpus positions)\n",
+      "2022-05-21 20:53:03,989 : INFO : Dictionary lifecycle event {'msg': \"built Dictionary<25005 unique tokens: ['best', 'buy', 'came', 'card', 'compared']...> from 7715 documents (total 711667 corpus positions)\", 'datetime': '2022-05-21T20:53:03.989787', 'gensim': '4.2.0', 'python': '3.10.4 (main, Apr  2 2022, 09:04:19) [GCC 11.2.0]', 'platform': 'Linux-5.17.5-76051705-generic-x86_64-with-glibc2.35', 'event': 'created'}\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique tokens: 25005\n",
+      "Number of documents: 7715\n"
+     ]
+    }
+   ],
    "source": [
     "corpus,dictionary = preproceso(microsoftPositivesDocuments)"
    ]
@@ -627,7 +749,11 @@
     "    model_act=gen_model(i,corpus)\n",
     "    top_topics = model_act.top_topics(corpus)\n",
     "    f.write('Modelo con %i clusters\\n' % i)\n",
-    "    f.write(top_topics)\n",
+    "    \n",
+    "    f.write(\"Modelo: \" + str(1) + \" -->\")\n",
+    "    \n",
+    "    for frec, word in top_topics[0][0]:\n",
+    "        f.write(\" \" + word + \" \" + str(frec) + \" |\")\n",
     "    f.write(\"\\n\\n\")\n",
     "f.close()"
    ]
