--- a/script_endika.ipynb
+++ b/script_endika.ipynb
@@ -532,6 +532,7 @@
     "import nltk\n",
     "from nltk.tokenize import RegexpTokenizer\n",
     "from nltk.stem.wordnet import WordNetLemmatizer\n",
+    "import gensim\n",
     "from gensim.corpora import Dictionary\n",
     "from gensim.models import LdaModel\n",
     "from pprint import pprint\n",
@@ -560,6 +561,10 @@
     "\n",
     "    # Remove words that are only one character.\n",
     "    docs = [[token for token in doc if len(token) > 1] for doc in docs]\n",
+    "\n",
+    "    # Remove stopwords\n",
+    "    stopwords = gensim.parsing.preprocessing.STOPWORDS\n",
+    "    docs = [[token for token in doc if not(token in stopwords)] for doc in docs]\n",
     "\n",
     "    # Lemmatize\n",
     "    lemmatizer = WordNetLemmatizer()\n",
@@ -601,8 +606,7 @@
     "        iterations=iterations,\n",
     "        num_topics=num_topics,\n",
     "        passes=passes,\n",
-    "        eval_every=eval_every,\n",
-    "        model=gen_model(i,corpus,dictionary)\n",
+    "        eval_every=eval_every\n",
     "    )\n",
     "\n",
     "    return model"
@@ -636,10 +640,11 @@
     "f = open('GensimSonyPos[10-100]' + \".txt\", \"a\")\n",
     "for i in range(10,101):\n",
     "    print(\"Generando modelo: \" + str(i))\n",
-    "    model_act=gen_model(i,corpus)\n",
+    "    model_act=gen_model(i,corpus,dictionary)\n",
     "    top_topics = model_act.top_topics(corpus)\n",
-    "    f.write('Modelo con %i clusters\\n' % i)\n",
-    "    f.write(top_topics)\n",
+    "    f.write('Modelo con %i clusters -->' % i)\n",
+    "    for frec, word in top_topics[0][0]:\n",
+    "        f.write(\" \" + word + \" \" + str(frec) + \" |\")\n",
     "    f.write(\"\\n\\n\")\n",
     "f.close()"
    ]
@@ -672,10 +677,11 @@
     "f = open('GensimSonyNeg[10-100]' + \".txt\", \"a\")\n",
     "for i in range(10,101):\n",
     "    print(\"Generando modelo: \" + str(i))\n",
-    "    model_act=gen_model(i,corpus)\n",
+    "    model_act=gen_model(i,corpus,dictionary)\n",
     "    top_topics = model_act.top_topics(corpus)\n",
-    "    f.write('Modelo con %i clusters\\n' % i)\n",
-    "    f.write(top_topics)\n",
+    "    f.write('Modelo con %i clusters -->' % i)\n",
+    "    for frec, word in top_topics[0][0]:\n",
+    "        f.write(\" \" + word + \" \" + str(frec) + \" |\")\n",
     "    f.write(\"\\n\\n\")\n",
     "f.close()"
    ]
