--- a/script_iker.ipynb
+++ b/script_iker.ipynb
@@ -612,9 +612,9 @@
     "import nltk\n",
     "from nltk.tokenize import RegexpTokenizer\n",
     "from nltk.stem.wordnet import WordNetLemmatizer\n",
+    "import gensim\n",
     "from gensim.corpora import Dictionary\n",
     "from gensim.models import LdaModel\n",
-    "import gensim\n",
     "from pprint import pprint\n",
     "nltk.download('wordnet')\n",
     "nltk.download('omw-1.4')\n",
@@ -748,10 +748,7 @@
     "    print(\"Generando modelo: \" + str(i))\n",
     "    model_act=gen_model(i,corpus)\n",
     "    top_topics = model_act.top_topics(corpus)\n",
-    "    f.write('Modelo con %i clusters\\n' % i)\n",
-    "    \n",
-    "    f.write(\"Modelo: \" + str(1) + \" -->\")\n",
-    "    \n",
+    "    f.write('Modelo con %i clusters -->' % i)\n",
     "    for frec, word in top_topics[0][0]:\n",
     "        f.write(\" \" + word + \" \" + str(frec) + \" |\")\n",
     "    f.write(\"\\n\\n\")\n",
@@ -788,8 +785,9 @@
     "    print(\"Generando modelo: \" + str(i))\n",
     "    model_act=gen_model(i,corpus)\n",
     "    top_topics = model_act.top_topics(corpus)\n",
-    "    f.write('Modelo con %i clusters\\n' % i)\n",
-    "    f.write(top_topics)\n",
+    "    f.write('Modelo con %i clusters -->' % i)\n",
+    "    for frec, word in top_topics[0][0]:\n",
+    "        f.write(\" \" + word + \" \" + str(frec) + \" |\")\n",
     "    f.write(\"\\n\\n\")\n",
     "f.close()"
    ]
