--- a/script_iñigo2.ipynb
+++ b/script_iñigo2.ipynb
@@ -577,6 +577,7 @@
     "import nltk\n",
     "from nltk.tokenize import RegexpTokenizer\n",
     "from nltk.stem.wordnet import WordNetLemmatizer\n",
+    "import gensim\n",
     "from gensim.corpora import Dictionary\n",
     "from gensim.models import LdaModel\n",
     "from pprint import pprint\n",
@@ -588,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8b1050c7",
    "metadata": {},
    "outputs": [],
@@ -605,6 +606,10 @@
     "\n",
     "    # Remove words that are only one character.\n",
     "    docs = [[token for token in doc if len(token) > 1] for doc in docs]\n",
+    "\n",
+    "    # Remove stopwords\n",
+    "    stopwords = gensim.parsing.preprocessing.STOPWORDS\n",
+    "    docs = [[token for token in doc if not(token in stopwords)] for doc in docs]\n",
     "\n",
     "    # Lemmatize\n",
     "    lemmatizer = WordNetLemmatizer()\n",
@@ -647,7 +652,6 @@
     "        num_topics=num_topics,\n",
     "        passes=passes,\n",
     "        eval_every=eval_every,\n",
-    "        model=gen_model(i,corpus,dictionary)\n",
     "    )\n",
     "\n",
     "    return model"
@@ -663,12 +667,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bb3ba204",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'intuitNegativesDocuments' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/eiros/Universidad/Curso_3/SAD/LDA/script_iñigo2.ipynb Cell 55'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/eiros/Universidad/Curso_3/SAD/LDA/script_i%C3%B1igo2.ipynb#ch0000054?line=0'>1</a>\u001b[0m corpus, dictionary \u001b[39m=\u001b[39m preproceso(intuitNegativesDocuments)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'intuitNegativesDocuments' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "corpus,dictionary = preproceso(intuitNegativesDocuments)"
+    "corpus, dictionary = preproceso(intuitNegativesDocuments)"
    ]
   },
   {
@@ -681,7 +697,7 @@
     "f = open('GensimIntuitNeg[10-100]' + \".txt\", \"a\")\n",
     "for i in range(10,101):\n",
     "    print(\"Generando modelo: \" + str(i))\n",
-    "    model=gen_model(i,corpus)\n",
+    "    model_act=gen_model(i,corpus,dictionary)\n",
     "    top_topics = model.top_topics(corpus)\n",
     "    f.write('Modelo con %i clusters\\n' % i)\n",
     "    f.write(top_topics)\n",
@@ -691,8 +707,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
